@@ -19,7 +19,7 @@
 
 <document>
   <header>
-    <title>HCatalog Command Line Interface</title>
+    <title>Command Line Interface</title>
   </header>
   <body>
 
