@@ -19,7 +19,7 @@
 
 <document>
   <header>
-    <title>HCatalog Input and Output Interfaces</title>
+    <title>Input and Output Interfaces</title>
   </header>
   <body>
 
