@@ -19,7 +19,7 @@
 
 <document>
   <header>
-    <title>HCatalog Load and Store Interfaces</title>
+    <title>Load and Store Interfaces</title>
   </header>
   <body>
  
