@@ -19,7 +19,7 @@
 
 <document>
   <header>
-    <title>Supported storage formats</title>
+    <title>Storage Formats</title>
   </header>
   <body>
   <p>HCatalog can read PigStorage and RCFile formatted files. The input drivers for the formats are PigStorageInputDriver, ULTInputDriver and RCFileInputDriver respectively. HCatalog currently produces only RCFile formatted output. The output driver for the same is RCFileOutputDriver. </p>
